--- a/android/app/src/main/res/values/ic_launcher_background.xml
+++ b/android/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#FFFFFF</color>
+    <color name="colorPrimary">#7c3aed</color>
+    <color name="colorPrimaryDark">#0c0818</color>
+    <color name="colorAccent">#7c3aed</color>
 </resources>
