--- a/android/app/src/main/res/values/ic_launcher_background.xml
+++ b/android/app/src/main/res/values/ic_launcher_background.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#7c3aed</color>
     <color name="colorPrimaryDark">#0c0818</color>
     <color name="colorAccent">#7c3aed</color>
+    <color name="ic_launcher_background">#0c0818</color>
 </resources>
